2000-11-07  Lars Wirzenius  <liw@iki.fi>

	* checks/check_sendsms.sh: Wrote.

2000-11-07  Lars Wirzenius  <liw@iki.fi>

	* checks/check_fakesmsc.sh: Wrote.

2000-11-06  Tuomas Luttinen  <tuo@wapit.com>

	* gw/wml_compiler.c: Variables with syntax errors are now discarded 
	with warning instead giving up with the hole WML source. Some memory 
	leak still exists. Also an unknown tag produces a warning in the log.

2000-11-06  Lars Wirzenius  <liw@iki.fi>

	* gw/smsc_at.c: Applied fix from Paul Keogh to hex number
	conversion.

2000-11-06  Lars Wirzenius  <liw@iki.fi>

	* utils/kannel-redhat.init.d: New file from Fabrice Gatille.

2000-11-06  Lars Wirzenius  <liw@iki.fi>

	* configure{,.in}, config.h.in: Add support for PAM enable and
	disable.
	
	* gw/smsbox_req.c: Fixed the PAM stuff so that it will compile
	with the new gwmem.h protectors against malloc and friends.

2000-11-06  Lars Wirzenius  <liw@iki.fi>

	* README, doc/userguide/userguide.xml: Moved information on how
	to use configure from README to User Guide.

2000-11-06  Lars Wirzenius  <liw@iki.fi>

    	* Bearerbox converted to use with ne HTTP server API, with help
	from Kalle Marjola.

	* gw/bb_http.c: Only use one thread to handle HTTP requests.
	Added function httpadmin_stop to help with shutdown
	synchronization issues.
	
	* gw/bearerbox.[ch]: In signal handler, call bb_shutdown, instead
	of set_shutdown_status. This point may need to be implemented
	better later. Call httpadmin_stop in main.
	
	* gwlib/http.c: Have http_close_all_server kill the server threads
	as well, including killing the FDSet poller thread.

2000-11-06  Kalle Marjola  <rpr@wapit.com>

	* gw/smsc_emi.c (emi_open_ip): check if allow_ip set. Thanks for
	Juho-Pekka Virolainen for noticing this.

2000-11-06  Yann Muller <ymuller@3glab.com>

	* gw/smsc_at.c: fixed Premicell bug. Added sleep(1) for nokiaphone.

2000-11-05  Richard Braakman  <dark@wapit.com>

	* gwlib/http.c: Make the interface of client_read_body() match the